fixed review photos bug on small screens

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -348,6 +348,9 @@
 		margin-right: auto;
 	}
 
+	&__friends{
+		display: flex;
+	}
 	&__photo {
 		box-sizing: content-box;
 		height: 4rem;
